release. For an exhaustive list of changes, see the ``CHANGES`` file
(note that submodules, such as Broker, come with their own ``CHANGES``.)

Zeek 8.2.0
==========

We'd like to thank ... for their contributions to this release.

Breaking Changes
----------------

- The minimum version requirement for ZeroMQ is now 4.3.0. This version has
  been released at the end of 2018 - a good 7 years ago.

New Functionality
-----------------

- Well-known ports of built-in analyzers can now be configured via redef. For example:

	redef HTTP::ports += { 8181/tcp };

  For protocol analyzers, the variable name is generally ``Analyzer_Module::ports``,
  but in certain cases (SSL, QUIC, RDP, ...) the variable name includes the protocol
  name to distinguish different internal analyzers. ``SSL::ssl_ports`` and ``SSL::dtls_ports``
  as a concrete example. Check the analyzer module's ``export`` section or online documentation.
  For packet analyzers, the analyzer name is included in the variable name for historical
  reasons. Example:

	redef PacketAnalyzer::VXLAN::vxlan_ports += { 4711/udp };

- The number of messages and bytes processed by the central ZeroMQ XPUB/XSUB
  cluster component is now exposed as metrics of the form:

	zeek_cluster_zeromq_proxy_{frontend,backend}_{bytes,messages}_{sent,received}

  by the process running this component in a cluster. Note that Zeek uses multipart
  messages for events: Publishing a single event currently counts as four messages
  as we're simply exposing ZeroMQ's low-level ``zmq::proxy_steerable()`` statistics.

- ``bifcl`` now accepts missing return types in functions signatures, creating
  void functions rather than complaining. The C++ signature will continue
  to have a ``ValPtr`` return type and the implementation should return a ``Val::nil``,
  but the Zeek script function signature will have a void return type.

- The ``&on_change`` attribute for tables or sets now accepts variable argument functions.
