@@ -1,0 +1,3 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+warning in <...>/enum-bad-type.zeek, line 14: Remove in v9.1. Mixing incompatible enum types color and city will become an error.
+warning in <...>/enum-bad-type.zeek, line 25: Remove in v9.1. Mixing incompatible enum types Analyzer::Tag and PacketAnalyzer::Tag will become an error.
