@@ -1,5 +1,4 @@
 ### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
 enum equality comparison (PASS)
 enum equality comparison (PASS)
-enum equality comparison (PASS)
 type inference (PASS)
